@@ -40,6 +40,7 @@
 #undef USE_FLOCK_LOCKS
 #undef USE_LASTDID
 #undef USE_PAM
+#undef USE_SRVLOC
 #undef USE_MOUNT_H
 #undef USE_OLD_RQUOTA
 #undef USE_UFS_QUOTA_H
