@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.103 2001-09-07 13:44:37 rufustfirefly Exp $
+dnl $Id: configure.in,v 1.104 2001-09-17 13:41:24 rufustfirefly Exp $
 dnl configure.in for netatalk
 
 AC_INIT(bin/adv1tov2/adv1tov2.c)
@@ -316,6 +316,27 @@ AC_ARG_WITH(message-dir,
 		SERVERTEXT="$msg_dir"
 		AC_SUBST(SERVERTEXT)
 )
+
+AC_ARG_ENABLE(srvloc,
+	[  --enable-srvloc         Turn on Server Location Protocol support EXPERIMENTAL)],
+	srvloc=$enableval,
+	srvloc=no
+)
+
+dnl Conditional for optional server location protocol support (used by OS X)
+AM_CONDITIONAL(USE_SRVLOC, test "x$srvloc" != "xno")
+if test "x$srvloc" != "xno"; then
+    for slpdir in "" $srvloc /usr /usr/local ; do
+		if test -f "$slpdir/include/slp.h" ; then
+			LDFLAGS="$LDFLAGS -L$slpdir/lib -lslp"
+			CFLAGS="$CFLAGS -I$slpdir/include"
+	    	AC_CHECK_LIB(slp,SLPOpen)
+	    	AC_CHECK_FUNCS(SLPReg SLPDereg SLPClose)
+	    	AC_DEFINE(USE_SRVLOC, 1)
+			break
+		fi
+	done
+fi
 
 AC_CHECK_LIB(pam, pam_start,
 	AC_DEFINE(USE_PAM, 1)
